model模块代码重构优化